<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot</name>
  <version>1.0.0</version>
  <description>
    ROS packages for the mobile_robot (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</author>
  <maintainer email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>mobile_robot_description</exec_depend>
  <exec_depend>mobile_robot_navigation</exec_depend>
  <exec_depend>mobile_robot_slam</exec_depend>
  <exec_depend>mobile_robot_teleop</exec_depend>
  <exec_depend>mobile_robot_gazebo</exec_depend>
</package>
