<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot_description</name>
  <version>1.0.0</version>
  <description>3D models of the mobile robot for simulation and visualization</description>

  <maintainer email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</maintainer>
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
