<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation package for the mobile robot</description>

  <maintainer email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
