<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robot_multi</name>
  <version>0.1.0</version>
  <description>
    Launch files for spawning multiple differential-drive mobile robots in Gazebo Sim.
  </description>
  <license>Apache 2.0</license>
  <author email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</author>
  <maintainer email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mobile_robot_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
