<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot_navigation</name>
  <version>1.0.0</version>
  <description>
    The mobile_robot_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</author>
  <maintainer email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>mobile_robot_bringup</exec_depend>
</package>
