<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot_slam</name>
  <version>1.0.0</version>
  <description>
    The mobile_robot_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</author>
  <maintainer email="nguyenhau442001@gmail.com">Nguyen Ngoc Hau</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>mobile_robot_bringup</exec_depend>
</package>
